fix: resolve Svelte 5 syntax errors and duplicated fields in settings page

--- a/.context.md
+++ b/.context.md
@@ -15,7 +15,7 @@
 - **Language:** TypeScript 5.x
 - **Styling:** Tailwind CSS 3.4.x
 - **UI Components:** shadcn-svelte 0.3.x
-- **Auth:** Clerk (latest)
+- **Auth:** Firebase Authentication (latest)
 - **State:** Svelte stores (built-in) + Zustand if needed
 - **Forms:** SvelteKit native forms + Zod validation
 - **HTTP:** Fetch API / SvelteKit load functions
@@ -27,7 +27,7 @@
 - **ORM:** Drizzle ORM
 - **Cache:** Cloudflare KV / D1
 - **Storage:** Cloudflare R2
-- **Auth:** Clerk (same as frontend)
+- **Auth:** Firebase Authentication (same as frontend)
 
 ### Infrastructure
 - **Hosting:** Cloudflare Pages
@@ -126,7 +126,7 @@ src/
 - Use environment variables for all secrets
 - Implement CSRF protection
 - Validate all user inputs (Zod)
-- Use Clerk for authentication
+- Use Firebase for authentication
 - Sanitize user-generated content
 - Implement rate limiting
 
@@ -141,7 +141,7 @@ src/
 - **Auth:** Global user accounts with tenant-specific roles
 
 ### Authentication & Authorization
-- **Provider:** Clerk
+- **Provider:** Firebase Authentication
 - **Flow:** OAuth + email/password
 - **SSO:** Multi-tenant SSO (one account, multiple schools)
 - **Roles:** Super Admin, School Admin, Verifier, User
