--- a/docs/02. TDD-PPDB-SAAS.md
+++ b/docs/02. TDD-PPDB-SAAS.md
@@ -14,7 +14,7 @@
 - **Storage:** Cloudflare R2
 - **Payment Gateway:** Midtrans / Xendit
 - **Infrastructure:** Cloudflare Workers
-- **Authentication:** Clerk
+- **Authentication:** Firebase Authentication
 
 ### System Purpose
 Platform SaaS multi-tenant untuk mengelola Penerimaan Peserta Didik Baru (PPDB) yang dapat digunakan oleh banyak sekolah dengan isolasi data dan konfigurasi independen.
@@ -215,53 +215,6 @@ sequenceDiagram
     Note over User: Profile data auto-filled from global account
 ```
 
-### Database Schema: Global vs Tenant Users
-
-```mermaid
-erDiagram
-    global_users {
-        uuid id PK
-        string email UK
-        string password_hash
-        string phone UK
-        string full_name
-        date birth_date
-        string nik
-        json profile_data
-        boolean email_verified
-        boolean phone_verified
-        timestamp created_at
-        timestamp updated_at
-    }
-    
-    user_registrations {
-        uuid id PK
-        uuid global_user_id FK
-        uuid tenant_id FK
-        uuid period_id FK
-        uuid path_id FK
-        string registration_number UK
-        json student_data
-        json parent_data
-        json school_origin_data
-        json path_specific_data
-        string status
-        timestamp created_at
-    }
-    
-    tenants {
-        uuid id PK
-        string name
-        string subdomain UK
-        string custom_domain
-        string status
-    }
-    
-    global_users ||--o{ user_registrations : registers
-    tenants ||--o{ user_registrations : receives
-```
-
----
 
 ## 1C. Multi-School Registration Configuration
 
@@ -588,7 +541,7 @@ graph TB
     subgraph "External Services"
         MIDTRANS[Midtrans/Xendit<br/>Payment Gateway]
         EMAIL[SendGrid<br/>Email Notifications]
-        CLERK[Clerk<br/>Authentication]
+        FIREBASE[Firebase<br/>Authentication]
     end
     
     WEB -->|HTTPS| CF
@@ -598,7 +551,7 @@ graph TB
     CF -->|Upload/Download| R2
     CF -->|Payment| MIDTRANS
     CF -->|Notifications| EMAIL
-    CF -->|Auth| CLERK
+    CF -->|Auth| FIREBASE
     
     style WEB fill:#e1f5ff
     style CF fill:#fff3e0
@@ -756,12 +709,14 @@ erDiagram
     users {
         uuid id PK
         uuid tenant_id FK
+        string firebase_uid UK
         string email UK
-        string password_hash
         string role
         string full_name
         string phone
         json profile_data
+        string photo_url
+        string firebase_provider
         timestamp last_login
         timestamp created_at
         timestamp updated_at
@@ -946,7 +901,7 @@ erDiagram
 graph TB
     subgraph "API Gateway Layer"
         GATEWAY[Cloudflare Workers<br/>Hono Framework]
-        AUTH[Auth Middleware<br/>Clerk]
+        AUTH[Auth Middleware<br/>Firebase]
         TENANT[Tenant Middleware]
         RBAC[RBAC Middleware]
     end
@@ -1079,46 +1034,46 @@ graph LR
 
 ## 5. Authentication & Authorization Flow
 
-### Clerk Authentication Flow
+### Firebase Authentication Flow
 
 ```mermaid
-sequenceDiagram
-    participant Client
-    participant Clerk
-    participant API
-    participant Database
-    participant KV
-    
-    Client->>+Clerk: Login/Signup
-    Note over Client,Clerk: Email/password or OAuth
-    
-    Clerk->>Clerk: Authenticate User
-    
-    alt Authentication Success
-        Clerk-->>-Client: JWT Token + Session
-        Note over Clerk,Client: { token, userId }
-        
-        Client->>Client: Store Token in Cookie
-        
-        Client->>+API: GET /api/v1/registrations
-        Note over Client,API: Headers: Authorization: Bearer {token}
-        
-        API->>+Clerk: Verify JWT Token
-        Clerk-->>-API: Token Valid + User Info
-        Note over Clerk,API: { userId, email, metadata }
-        
-        API->>API: Extract tenant_id from metadata
-        API->>+KV: Check Session Cache
-        KV-->>-API: Session Valid
-        
-        API->>API: Apply RBAC Check
-        API->>+Database: Query with tenant_id filter
-        Database-->>-API: Filtered Data
-        API-->>-Client: 200 OK + Data
-        
-    else Authentication Failed
-        Clerk-->>Client: 401 Unauthorized
-    end
+ sequenceDiagram
+     participant Client
+     participant Firebase
+     participant API
+     participant Database
+     participant KV
+     
+     Client->>+Firebase: Login/Signup
+     Note over Client,Firebase: Email/password or OAuth
+     
+     Firebase->>Firebase: Authenticate User
+     
+     alt Authentication Success
+         Firebase-->>-Client: JWT Token + Session
+         Note over Firebase,Client: { token, userId }
+         
+         Client->>Client: Store Token in Cookie
+         
+         Client->>+API: GET /api/v1/registrations
+         Note over Client,API: Headers: Authorization: Bearer {token}
+         
+         API->>+Firebase: Verify JWT Token
+         Firebase-->>-API: Token Valid + User Info
+         Note over Firebase,API: { userId, email, metadata }
+         
+         API->>API: Extract tenant_id from metadata
+         API->>+KV: Check Session Cache
+         KV-->>-API: Session Valid
+         
+         API->>API: Apply RBAC Check
+         API->>+Database: Query with tenant_id filter
+         Database-->>-API: Filtered Data
+         API-->>-Client: 200 OK + Data
+         
+     else Authentication Failed
+         Firebase-->>Client: 401 Unauthorized
+     end
 ```
 
 ### Role-Based Access Control (RBAC)
@@ -1746,7 +1701,7 @@ graph TB
     subgraph "External Services"
         MIDTRANS[Midtrans/Xendit]
         EMAIL[SendGrid]
-        CLERK[Clerk Auth]
+        FIREBASE[Firebase Auth]
     end
     
     E1 --> WKR1
@@ -2054,7 +2009,7 @@ graph LR
 | Drizzle ORM | 0.30+ | Database ORM |
 | TypeScript | 5.x | Type safety |
 | Zod | 3.x | Validation |
-| Clerk | - | Authentication |
+| Firebase | - | Authentication |
 
 ### Database & Storage
 
