--- a/docs/03. WBS-PPDB-SAAS.md
+++ b/docs/03. WBS-PPDB-SAAS.md
@@ -53,7 +53,7 @@ This WBS breaks down the Phase 1 MVP (SaaS Multi-Unit PPDB Platform) into action
 | 1.4.4 | Implement schema: Students, Registrations, Payments | Backend Dev | 3 | Backend Dev | 1.4.2 | Pending |
 | 1.4.5 | Setup seed data for testing | Backend Dev | 2 | Backend Dev | 1.4.4 | Pending |
 | 1.5 | Authentication System | Backend Dev | 16 | Backend Dev | 1.4.2 | Pending |
-| 1.5.1 | Implement Clerk authentication integration | Backend Dev | 4 | Backend Dev | 1.4.2 | Pending |
+| 1.5.1 | Implement Firebase authentication integration | Backend Dev | 4 | Backend Dev | 1.4.2 | Pending |
 | 1.5.2 | Create JWT token handling | Backend Dev | 2 | Backend Dev | 1.5.1 | Pending |
 | 1.5.3 | Implement role-based access control (RBAC) | Backend Dev | 4 | Backend Dev | 1.5.2 | Pending |
 | 1.5.4 | Create session management middleware | Backend Dev | 3 | Backend Dev | 1.5.2 | Pending |
