--- a/docs/04. Risk-Management-Plan.md
+++ b/docs/04. Risk-Management-Plan.md
@@ -40,7 +40,7 @@ This document identifies potential risks that could impact the PPDB SaaS Platfor
 |----|------|----------|------|-----|-------|-------|---------|-------------------|-------|--------|
 | T-001 | Cloudflare Workers performance doesn't meet requirements | Technical | 3 | 5 | 15 | High | Response time >3s in load testing | 1. Early performance testing<br>2. Implement caching with KV/D1<br>3. Plan B: Migrate to edge functions on Vercel | Tech Lead | Active |
 | T-002 | Neon PostgreSQL latency issues affecting multi-tenant performance | Technical | 3 | 4 | 12 | High | Query latency >500ms | 1. Implement connection pooling<br>2. Add read replicas<br>3. Query optimization<br>4. Plan B: Migrate to Amazon RDS | Backend Dev | Active |
-| T-003 | Clerk authentication downtime or API limits exceeded | Technical | 3 | 5 | 15 | High | Login failures >5% | 1. Implement session caching in KV<br>2. Add retry logic with exponential backoff<br>3. Plan B: Implement fallback JWT auth | Backend Dev | Active |
+| T-003 | Firebase authentication downtime or API limits exceeded | Technical | 3 | 5 | 15 | High | Login failures >5% | 1. Implement session caching in KV<br>2. Add retry logic with exponential backoff<br>3. Plan B: Implement fallback JWT auth | Backend Dev | Active |
 | T-004 | Dukcapil API becomes unavailable or changes API format | Technical | 3 | 4 | 12 | High | NIK validation failure rate >10% | 1. Implement 24hr validation cache<br>2. Graceful degradation: allow registration without validation<br>3. Manual verification as fallback | Backend Dev | Active |
 | T-005 | Midtrans payment gateway downtime or integration issues | Technical | 2 | 5 | 10 | Medium | Payment success rate <95% | 1. Show multiple payment methods<br>2. Payment retry logic<br>3. Manual payment reconciliation process<br>4. Plan B: Integrate Xendit as backup | Backend Dev | Active |
 | T-006 | Data migration from legacy systems fails or corrupts data | Technical | 2 | 5 | 10 | Medium | Data inconsistency during migration | 1. Create backup before migration<br>2. Run migration in staging first<br>3. Implement data validation scripts<br>4. Rollback plan ready | Backend Dev | Active |
