--- a/docs/05. Project-Schedule.md
+++ b/docs/05. Project-Schedule.md
@@ -52,7 +52,7 @@ Phase 7                                           ████████
 | Week 1 | 06-10 Jan | Project setup, Initialize SvelteKit, Setup Cloudflare Workers | Project initialized, Environment ready | DevOps |
 | Week 2 | 13-17 Jan | Configure Neon PostgreSQL, Setup R2 & D1, Create database migrations | Database schema implemented, Storage configured | Backend Dev |
 | Week 3 | 20-24 Jan | Terraform config, CI/CD pipeline, Dev tools setup (ESLint, Vitest, Playwright) | Infrastructure as code, Testing framework | DevOps, Tech Lead |
-| Week 4 | 27-31 Jan | Authentication system (Clerk), RBAC implementation, Multi-tenant context | Authentication complete, RBAC working | Backend Dev |
+| Week 4 | 27-31 Jan | Authentication system (Firebase), RBAC implementation, Multi-tenant context | Authentication complete, RBAC working | Backend Dev |
 
 **Phase 1 Milestones:**
 - ✅ Project infrastructure operational
