--- a/docs/06. Resource-Budget-Plan.md
+++ b/docs/06. Resource-Budget-Plan.md
@@ -118,7 +118,7 @@
 
 | Service | Pricing Model | Monthly Cost | Setup Cost | 22 Weeks Cost | Annual Cost |
 |---------|---------------|--------------|------------|---------------|-------------|
-| **Clerk (Authentication)** | $29/month (Scale plan) | $29 | $0 | $159.50 | $348 |
+| **Firebase Authentication** | Free (Spark plan) | $0 | $0 | $0 | $0 |
 | **SendGrid (Email)** | $15/month (Basic) | $15 | $0 | $82.50 | $180 |
 | **Midtrans (Payment)** | 1.5% transaction fee | Variable* | $0 | Variable | Variable* |
 | **Google Maps API** | $200/month credit free | $0 | $0 | $0 | $0 |
